Row Align Fixes

--- a/src/main/resources/com/example/atmmanagementsystem/atm.css
+++ b/src/main/resources/com/example/atmmanagementsystem/atm.css
@@ -87,6 +87,7 @@
 /* Side Buttons (Arrows) */
 .side-buttons-container {
     -fx-spacing: 25;
+    -fx-padding: 27 0 0 0;
 }
 
 .side-btn {
